force-app/main/default/objects/custom_create231__c/custom_create231__c.object-meta.xml
<CustomObject>
    <label>Custom created object231</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects231</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>