force-app/main/default/objects/custom_create231__c/fields/custom_create_231field516__c.field-meta.xml
<CustomField>
    <fullName>custom_create_231field516__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 231field516</label>
    <type>Checkbox</type>
</CustomField>